--- a/TODO
+++ b/TODO
@@ -22,4 +22,9 @@ can't delete a team if they have games
 
 Lock down devise routes we don't care about: account editing etc.
 
-Welcome page
+b&w tension.png
+don't show the empty logout p tag because it has a background now
+logo: image? typekit?
+fix the password reset email sending on the server
+check we're handling player/team/game deletion
+cucumber tests of workflow
